# miniclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cursor/rules/: project-guide.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md
scripts/: install.sh
src/: agent.rs  cli.rs  config.rs  main.rs  rules.rs  session.rs  trusted_workspaces.rs  types.rs
src/llm/: anthropic.rs  mod.rs  openai_compatible.rs
src/tools/: bash.rs  edit.rs  list_directory.rs  mod.rs  read_file.rs  risk.rs  write_file.rs
src/transport/: cli.rs  mod.rs  telegram.rs  telegram_state.rs
src/ui/: markdown.rs  mod.rs  ratatui_ui.rs
